<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonYesToAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/_ivAdTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/consent_top_icon" />

            <TextView
                android:id="@+id/_tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/consent_to_targeted_advertising"
                android:textColor="#000000"
                android:textSize="30sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="20dp"
                android:text="@string/consent_dialog_explanation_text"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonYesToAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#e2a026"
        android:text="@string/yes_to_all"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNoToAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/buttonNoToAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_to_all"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textPrivacyPolicy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPrivacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/view_privacy_policy"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>